--- a/3d_nangnon/index.html
+++ b/3d_nangnon/index.html
@@ -29,6 +29,7 @@ $(function(){
       <div class="jumbotron mt-3">
         <h1>3D Web map :ถ้ำหลวงขุนน้ำนางนอน</h1>
         <p class="lead">สภาพภูมิประเทศ บริเวณ  ถ้ำหลวงขุนน้ำนางนอน จ.เชียงราย</p>
+		<img src="images/3d_nangnon_cave.png">
         <a class="btn btn-lg btn-primary" href="#" role="button">View...</a>
       </div>
     </div>
