--- a/3d_nangnon/index.html
+++ b/3d_nangnon/index.html
@@ -29,20 +29,21 @@ $(function(){
       <div class="jumbotron mt-3">
         <h1>3D Web map :ถ้ำหลวงขุนน้ำนางนอน</h1>
         <p class="lead">สภาพภูมิประเทศ บริเวณ  ถ้ำหลวงขุนน้ำนางนอน จ.เชียงราย</p>
-		<img src="images/3d_nangnon_cave.png">
-        <a class="btn btn-lg btn-primary" href="#" role="button">View...</a>
+		<img src="images/3d_nangnon_cave.png" class="img-responsive"/>
+        <a class="btn btn-lg btn-primary" href="20180705155629.html" target="_blank" role="button">Enter 3D MAP</a>
       </div>
     </div>
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">NWCC</a>
+      <a class="navbar-brand" href="#">ONWR|Office of National Water Resource</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="http://www.onwr.go.th">Home <span class="sr-only">(current)</span></a>
           </li>
+		  <!--
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
@@ -56,10 +57,11 @@ $(function(){
               <a class="dropdown-item" href="#">Another action</a>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          </li>
+          </li>-->
         </ul>
+		
       </div>
-	  <div class="fload-right"></div>
+	  <div class="float-right">จัดทำโดย ศอน.|ศูนย์อำนวยการน้ำแห่งชาติ</div>
     </nav>
 
     <!-- Bootstrap core JavaScript
