--- a/3d_nangnon/index.html
+++ b/3d_nangnon/index.html
@@ -29,7 +29,7 @@ $(function(){
       <div class="jumbotron mt-3">
         <h1>3D Web map :ถ้ำหลวงขุนน้ำนางนอน</h1>
         <p class="lead">สภาพภูมิประเทศ บริเวณ  ถ้ำหลวงขุนน้ำนางนอน จ.เชียงราย</p>
-		<img src="images/3d_nangnon_cave.png" class="img-responsive"/>
+		<img src="images/3d_nangnon_cave.png" class="img-fluid"/>
         <a class="btn btn-lg btn-primary" href="20180705155629.html" target="_blank" role="button">Enter 3D MAP</a>
       </div>
     </div>
@@ -61,7 +61,7 @@ $(function(){
         </ul>
 		
       </div>
-	  <div class="float-right">จัดทำโดย ศอน.|ศูนย์อำนวยการน้ำแห่งชาติ</div>
+	  <div class="float-right text-muted">จัดทำโดย ศอน.|ศูนย์อำนวยการน้ำแห่งชาติ</div>
     </nav>
 
     <!-- Bootstrap core JavaScript
