--- a/3d_nangnon/index.html
+++ b/3d_nangnon/index.html
@@ -30,7 +30,7 @@ $(function(){
         <h1>3D Web map :ถ้ำหลวงขุนน้ำนางนอน</h1>
         <p class="lead">สภาพภูมิประเทศ บริเวณ  ถ้ำหลวงขุนน้ำนางนอน จ.เชียงราย</p>
 		<img src="images/3d_nangnon_cave.png" class="img-fluid"/>
-        <a class="btn btn-lg btn-outline-primary" href="20180705155629.html" target="_blank" role="button">Enter 3D MAP</a>
+        <a class="btn btn-lg btn-outline-primary" href="20180705155629.html" target="_blank" role="button">Enter 3D MAP view 1</a> <a class="btn btn-lg btn-outline-primary" href="20180706112920.html" target="_blank" role="button">Enter 3D MAP view 2</a>
       </div>
     </div>
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
