--- a/flashcard/index.html
+++ b/flashcard/index.html
@@ -29,6 +29,11 @@
 
     <button onclick="start()" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700 transition">เริ่ม</button>
 
+    <div class="flex flex-col sm:flex-row gap-2 mt-4">
+      <button onclick="reviewWrongCards()" class="flex-1 bg-red-500 text-white p-2 rounded hover:bg-red-600 transition">ฝึกคำที่ตอบผิด</button>
+      <button onclick="clearWrongCards()" class="flex-1 bg-gray-500 text-white p-2 rounded hover:bg-gray-600 transition">ล้างคำที่ตอบผิด</button>
+    </div>
+
     <hr class="my-6">
 
     <div id="card-section" class="hidden">
@@ -47,6 +52,6 @@
     </div>
   </div>
 
-  <script src="flashcards.js"></script>
+  <script src="flashcards_with_wrong_save.js"></script>
 </body>
 </html>
