add wrong card fix

--- a/flashcard/index.html
+++ b/flashcard/index.html
@@ -52,6 +52,6 @@
     </div>
   </div>
 
-  <script src="flashcards_with_wrong_save.js"></script>
+  <script src="flashcards.js"></script>
 </body>
 </html>
