--- a/flashcard/index.html
+++ b/flashcard/index.html
@@ -43,7 +43,7 @@
       <div id="buttons" class="flex flex-col sm:flex-row gap-2 mb-4">
         <button onclick="showAnswer()" class="flex-1 bg-yellow-400 text-black p-2 rounded hover:bg-yellow-500 transition">แสดงคำตอบ</button>
         <button onclick="markCorrect()" class="flex-1 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition">ถูก</button>
-        <button onclick="nextCard()" class="flex-1 bg-red-500 text-white p-2 rounded hover:bg-red-600 transition">ผิด / ข้าม</button>
+        <button onclick="markWrong()" class="flex-1 bg-red-500 text-white p-2 rounded hover:bg-red-600 transition">ผิด / ข้าม</button>
       </div>
 
       <button id="finish-button" onclick="finishQuiz()" class="w-full bg-gray-400 text-white p-2 rounded hover:bg-gray-500 transition hidden mb-4">จบแบบฝึกหัด</button>
